[package]
name = "co-author"
version = "0.1.1"
edition = "2021"
license = "AGPL-3.0"
description = "Co-Author your git commits from the command line"
readme = "README.md"
repository = "https://github.com/EricDriussi/co-author"
keywords = ["git", "libgit2", "git2rs"]
categories = ["command-line-interface", "command-line-utilities", "development-tools"]
exclude = [
    ".*",
    "**/test.rs",
    "Taskfile.yml",
    "LICENSE",
]

[dependencies]
git2 = "0.18.0"
clap = { version = "4.3.19", features = ["derive"] }
rustyline = "12.0.0"
colored = "2.0.4"
config = "0.13.1"

[dev-dependencies]
serial_test = "2.0"
