[package]
name = "co-author"
version = "0.1.1"
edition = "2021"
license = "AGPL-3.0"
description = "Co-Author your git commits from the command line"
readme = "README.md"
repository = "https://github.com/EricDriussi/co-author"
keywords = ["git", "libgit2", "git2rs", "author", "co-author"]
categories = ["command-line-interface", "command-line-utilities", "development-tools"]
exclude = [
    ".*",
    "**/test/**/*",
    "**/test.rs",
    "Taskfile.yml",
    "LICENSE",
]

[dependencies]
git2 = "0.18.0"
clap = { version = "4.3.19", features = ["derive"] }
rustyline = "12.0.0"
colored = "2.0.4"
config = "0.13.1"

[dev-dependencies]
serial_test = "2.0"
strip-ansi = "0.1.0"
parameterized = "1.1.0"
mockall = "0.12.1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny" # No * imports
pedantic = "deny" # Strict checks
unwrap_used = "deny" # No unwraps
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow" # TODO: Remove this?
new_without_default = "allow"

[profile.dev]
opt-level = 1 # Very build-time optimized

[profile.release]
opt-level = "z" # Very size optimized
lto = true # Very optimized
strip = "symbols" # Reduce binary size
panic = "abort"
