[package]
name = "co-author"
version = "0.1.1"
edition = "2021"
license = "AGPL-3.0"
description = "Co-Author your git commits from the command line"
readme = "README.md"
repository = "https://github.com/EricDriussi/co-author"
keywords = ["git", "libgit2", "git2rs", "author", "co-author"]
categories = ["command-line-interface", "command-line-utilities", "development-tools"]
exclude = [
    "**/test/**/*",
    "**/test_utils/**/*",
]

[dependencies]
git2 = "0.18.0"
clap = { version = "4.3.19", features = ["derive"] }
rustyline = "12.0.0"
colored = "2.0.4"
config = "0.13.1"

[dev-dependencies]
serial_test = "2.0"
strip-ansi = "0.1.0"
parameterized = "1.1.0"
mockall = "0.12.1"
rand = "0.8.5"
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny" # No * imports
pedantic = "deny" # Strict checks
unwrap_used = "deny" # No unwraps
module_name_repetitions = "allow"

[profile.dev]
opt-level = 1 # Very build-time optimized

[profile.release]
opt-level = "z" # Very size optimized
lto = true # Very optimized
strip = "symbols" # Reduce binary size
panic = "abort"
